   * sliders can be adjusted with keyboard left and right
   * sidebar reports related to gold, units, villages and time get greyed out
     during other team's turns
   * improve the tiny gui support (resolution of 320x240 pixels)
   * when discovering friendly units, the message is now blue
   * show leader name in statistics title (patch #604, FR #6932)
   * initial support for GP2X controls
 * WML engine
   * add hide_help key to prevent some unit to be display in help menu
   * allow_new_game key (default=yes) to prevent [multiplayer] scenarios to
     show up in the multiplayer game creation interface (FR #6397)
   * new [set_specials] tag to allow custom special in effect tags
   * new remove_specials=<id_list> key to allow to remove specials in effect
     tags
   * obsolete set_special= in [effect] tags
   * correct handling of UTF8 filenames under windows
   * fighting animations can now be filtered on swing number
   * add progressive paramteters, allow to specify a value that will move
   * fighting animations can now be filtered by damage done
   * fighting animations can now be filtered by attack filter on attacker's
   * fighting animations can now be filtered by attack filter on defender's
   attack
   continuously in an animation
   * alpha blending is our first progressive parameter
   * new parameter in frames, offset. It allows to specify the position
   * new parameter in frames blend_color and blend_ratio, to mix a color in
   the anim
   relative to the faced hex
   * units can now have a recruit animation that will be played on unit
   recruit.
   * units now have idle animations when they arn't used for some time
   * units now have levelin animations when they level into this unit
   * units now have levelout animations when they level out of this unit
   * animations can now use standard unit filters
   * animations can now use standard unit filters on the secondary unit
 * multiplayer game management