@@ -26,6 +26,7 @@ const char LARGE_TEXT='*', SMALL_TEXT='`', GOOD_TEXT='@', BAD_TEXT='#',
 
 namespace {
 
+
 //function which will parse the markup tags at the front of a string
 std::string::const_iterator parse_markup(std::string::const_iterator i1, std::string::const_iterator i2,
 					 int* font_size, SDL_Color* colour, int* style)
@@ -137,6 +138,40 @@ std::string::const_iterator parse_markup(std::string::const_iterator i1, std::st
 
 }
 
+
+// Copy string but without tags at the begining 
+std::string del_tags(std::string name){
+	std::stringstream					str;
+	bool									not_colour = true;
+	bool									not_name = true;
+	std::string::const_iterator	it;
+	for (it = name.begin(); it != name.end(); it++){
+		// Start of RGB definition block, so stop react on numbers
+		if (not_name && *it == COLOR_TEXT){
+			not_colour = false;
+		}
+		// Ending of RGB block
+		if (*it == '>'){
+			not_colour = true;
+		}
+
+		// Number outside colour block
+		if (not_name && not_colour && isdigit(*it)){
+			not_name = false;
+			str 	<< *it;
+		}
+
+		// On the first analphabet character we stop react on specials characters
+		if (not_name && isalpha(*it)){
+			not_name = false;
+		}
+		
+		if (!not_name){
+			str << *it;
+		}
+	}
+	return str.str();
+}
 
 SDL_Rect text_area(const std::string& text, int size, int style)
 {
