@@ -28,6 +28,7 @@ Version 1.3-svn:
    * when discovering friendly units, the message is now blue
    * show leader name in statistics title (patch #604, FR #6932)
    * initial support for GP2X controls
+   * show leader's name and colour at status table even that team is fogged (patch #605)
  * WML engine
    * add hide_help key to prevent some unit to be display in help menu
    * allow_new_game key (default=yes) to prevent [multiplayer] scenarios to
